<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/regularRed"
    tools:context=".modules.Login.view.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo_news_login_activity"
            android:layout_width="200dp"
            android:layout_height="75dp"
            android:layout_marginTop="32dp"
            android:layout_gravity="center"
            android:src="@drawable/canewseh_logo_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_login_activity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_login_login_activity"
            android:textColor="@android:color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="@+id/logo_news_login_activity"
            app:layout_constraintStart_toStartOf="@+id/logo_news_login_activity"
            app:layout_constraintTop_toBottomOf="@+id/logo_news_login_activity" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="32dp"
            app:cardCornerRadius="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_login_activity_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/basicGrey"
                android:orientation="vertical"
                android:padding="16dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_hint_email_login_activity">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_login_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_hint_password_login_activity">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_login_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_forgot_login_activity"
                    android:layout_gravity="end"
                    android:textStyle="bold"
                    android:id="@+id/btn_forgot_pass"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/regularRed"
                    android:text="@string/text_btn_login_activity"
                    android:id="@+id/btn_login"
                    android:textColor="@android:color/white"
                    android:textAllCaps="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_sign_up_login_activity"
                    android:layout_gravity="start"
                    android:textStyle="bold"
                    android:layout_marginStart="4dp"
                    android:id="@+id/btn_sign_up"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>